WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301538
REGRESSION(
294225@main
): apple.com Careers menu items disappear after animating in
https://bugs.webkit.org/show_bug.cgi?id=301538
Summary
REGRESSION(294225@main): apple.com Careers menu items disappear after animati...
Matt Woodrow
Reported
2025-10-27 16:13:35 PDT
Steps to reproduce: 1. On iPhone, navigate to
https://www.apple.com/careers
using Safari 2. Expand menu item of “Careers at Apple” and observe menu items disappear
rdar://161367545
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2025-10-27 16:18:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53052
EWS
Comment 2
2025-10-28 13:03:57 PDT
Committed
302255@main
(4d0d8131db61): <
https://commits.webkit.org/302255@main
> Reviewed commits have been landed. Closing PR #53052 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug