Cherry-pick 302255@main (4d0d8131db61). https://bugs.webkit.org/show_bug.cgi?id=301538

REGRESSION(294225@main): apple.com Careers menu items disappear after animating in.
    https://bugs.webkit.org/show_bug.cgi?id=301538
    <rdar://161367545>

    Reviewed by Simon Fraser.

    Visibility hidden can be overriden by descendants, we need to track repaint rects if anything in the tree
    is visible, not just the current layer.

    Test: compositing/repaint/change-opacity-visibility-hidden.html

    * LayoutTests/compositing/repaint/change-opacity-visibility-hidden-expected.txt: Added.
    * LayoutTests/compositing/repaint/change-opacity-visibility-hidden.html: Added.
    * LayoutTests/fast/repaint/incorrect-repaint-when-child-layer-overflows-expected.txt:
    * LayoutTests/svg/compositing/transform-change-repainting-viewBox-repaintRects-expected.txt:
    * Source/WebCore/rendering/RenderElement.cpp:
    (WebCore::RenderElement::repaintBeforeStyleChange):
    * Source/WebCore/rendering/RenderLayer.cpp:
    (WebCore::RenderLayer::recursiveUpdateLayerPositions):
    (WebCore::RenderLayer::computeRepaintRects):
    (WebCore::RenderLayer::calculateClipRects const):
    * Source/WebCore/rendering/RenderLayer.h:

    Canonical link: https://commits.webkit.org/302255@main

Canonical link: https://commits.webkit.org/298234.219@webkitglib/2.50